test-cases/final-dump/bug228-type.wybe
resource bar:int

def use_bar use ?bar { ?bar = 1 }

?bar = "1.0"
use bar in {
    !use_bar
    !println(bar)
}

!println(bar)
